# Things3-MCP

./: .env.example  README.md  pyproject.toml
.claude/: settings.local.json
docs/security/: local-bridge-security.md
docs/sessions/: 2026-01-28-1510-fastmcp3-benchmark.md  2026-01-29-0937-fastmcp3-performance.md  2026-01-29-1417-fastmcp3-performance-optimisation.md  2026-01-29-2329-cache-invalidation-fixes.md  2026-01-30-0021-opus-review-fixes.md  2026-02-04-1310-fastmcp3-cache-fixes.md  2026-02-04-1645-fastmcp3-feature-analysis.md  2026-05-03-1206-signed-local-bridge-plan.md  2026-05-03-1845-signed-local-bridge-research.md  2026-05-05-0834-signed-local-bridge-working.md
packaging/macos/: Things3MCPBridge.icns  com.rossshannon.things3-mcp.bridge.plist.template
packaging/macos/Things3 MCP Bridge.app/Contents/: Info.plist.template
scripts/: build_bridge_app.sh  check_bridge.py  install_bridge_launchagent.sh  seed_cache.py  sign_bridge_app.sh  uninstall_bridge_launchagent.sh
src/things3_mcp/: applescript_bridge.py  fast_server.py  formatters.py
src/things3_mcp/providers/: __init__.py  base.py  bridge.py  cache.py  direct.py
src/things3_mcp_bridge/: __init__.py  _disclaim.py  auth_status.py  cache.py  db_reader.py  protocol.py  server.py
tests/: conftest.py  test_cache_invalidation.py  test_error_handling_and_logging.py  test_list_assignment_operations.py  test_list_operations.py  test_provider_bridge_cache.py  test_task_operations.py
